--- a/Coding.Kata01.Library/Coding.Kata01.Library/Coding.Kata01.Library.csproj
+++ b/Coding.Kata01.Library/Coding.Kata01.Library/Coding.Kata01.Library.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
-    <Compile Include="IBookCategory.cs" />
+    <Compile Include="BookCategory.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
